Fixed alignment issues and added more details to README

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html, body {
     height: 100%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 body {
     display: flex;
@@ -22,7 +23,7 @@ body {
     flex-direction: column;
     background-color: black;
     padding: 20px;
-    width: 60vh;
+    width: 50%;
     border-radius: 20px;
     border: 3px solid orangered;
 }
